# Eel-reloaded

./: CHANGELOG.md  README-developers.md  README.md  RELEASE_NOTES_v0.19.0.md  ROADMAP.md  UPSTREAM_TRIAGE_TEMP.md  mypy.ini  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  tox.ini
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/agents/: eel-reloaded.agent.md
.github/workflows/: main.yml  test.yml
eel/: __init__.py  __main__.py  browsers.py  chrome.py  edge.py  eel.js  electron.py  types.py
examples/01 - hello_world/: hello.py
examples/01 - hello_world-Edge/: hello.py
examples/02 - callbacks/: callbacks.py
examples/03 - sync_callbacks/: sync_callbacks.py
examples/04 - file_access/: file_access.py
examples/05 - input/: script.py
examples/06 - jinja_templates/: hello.py
examples/06 - jinja_templates/web/templates/: hello.html
examples/07 - CreateReactApp/: README.md  eel_CRA.py
examples/08 - disable_cache/: disable_cache.py
examples/09 - Eelectron-quick-start/: hello.py
examples/10 - custom_app_routes/: custom_app.py
examples/11 - main_thread_file_picker/: README.md  app.py
examples/11 - main_thread_file_picker/web/: index.html
examples/12 - wasm_frontend/: README.md  app.py
examples/12 - wasm_frontend/web/: index.html
tests/: conftest.py  utils.py
tests/data/connection_failure/: repro.py
tests/data/connection_failure/web/: boot.html
tests/integration/: test_examples.py
tests/unit/: test_edge.py  test_eel.py
