[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Eel"
version = "0.19.0"
description = "For little HTML GUI applications, with easy Python/JS interop"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Python Eel Organisation", email = "python-eel@protonmail.com" },
]
keywords = ["gui", "html", "javascript", "electron"]
requires-python = ">=3.12"
dependencies = ["starlette>=0.36.0", "uvicorn[standard]>=0.27.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
jinja2 = ["jinja2>=3.0"]

[project.urls]
Homepage = "https://github.com/python-eel/Eel"

[tool.setuptools.packages.find]
where = ["."]
include = ["eel*"]

[tool.setuptools.package-data]
eel = ["eel.js", "py.typed"]

[tool.mypy]
strict = true
